--- a/app/src/main/res/layout/aler_dialog_in_main_tamplate.xml
+++ b/app/src/main/res/layout/aler_dialog_in_main_tamplate.xml
@@ -5,10 +5,11 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_gravity="center"
     android:layout_height="match_parent"
-    android:background="@color/black">
+    android:background="#00000000">
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:background="#00000000">
 
 
         <androidx.cardview.widget.CardView
@@ -21,23 +22,22 @@
             <ScrollView
 
                 android:paddingTop="30dp"
-
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:backgroundTint="#000000"
+                android:background="#00000000"
                 android:layout_centerInParent="true"
                 >
                 <RelativeLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:backgroundTint="#000000"
+                    android:background="#00000000"
                     android:layout_centerInParent="true">
 
                     <RelativeLayout
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_alignParentTop="true"
-                        android:backgroundTint="#000000"
+                        android:background="#00000000"
                         android:layout_centerInParent="true">
                         <TextView
                             android:id="@+id/lblEndOfMonth"
@@ -68,7 +68,7 @@
                             android:layout_marginLeft="10dp"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:text="Топ 4 категории за месяц"
+                            android:text="Топ категорий за месяц:"
                             android:gravity="left"
                             android:layout_centerHorizontal="true"
                             android:textColor="@color/black"
