--- a/app/src/main/res/layout/timer_fragment.xml
+++ b/app/src/main/res/layout/timer_fragment.xml
@@ -1,19 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:background="@color/black">
+
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
         android:orientation="vertical"
         android:gravity="center">
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
+
 
         <RelativeLayout
             android:id="@+id/containerForMainLbl"
@@ -128,11 +128,13 @@
             >
 
             <TextView
+                android:id="@+id/lblName"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Наименование"
                 android:textColor="@color/white"
                 android:textSize="20dp"
+                android:padding="10dp"
                 android:layout_centerHorizontal="true"
                 />
 
@@ -146,8 +148,9 @@
                 android:background="@drawable/body_for_edit_text"
                 android:textColor="@color/black"
                 android:textSize="20dp"
-                android:singleLine="true"
                 android:maxLength="13"
+                android:singleLine="true"
+                android:layout_below="@id/lblName"
                 android:paddingLeft="15dp"/>
 
         </RelativeLayout>
@@ -170,9 +173,8 @@
                 android:foreground="?android:attr/selectableItemBackground"
                 />
         </RelativeLayout>
-        </RelativeLayout>
     </LinearLayout>
 
 
 
-</RelativeLayout>
+</ScrollView>
