--- a/app/src/main/res/layout/activity_money_pig.xml
+++ b/app/src/main/res/layout/activity_money_pig.xml
@@ -78,8 +78,7 @@
                     android:layout_height="198dp"
                     android:layout_centerInParent="true"
                     android:background="@drawable/money_pig_def"
-                    android:visibility="invisible"
-                    />
+                    android:visibility="invisible" />
 
 
             </RelativeLayout>
