--- a/app/src/main/res/layout/good_template.xml
+++ b/app/src/main/res/layout/good_template.xml
@@ -90,28 +90,25 @@
                     android:layout_marginRight="10dp"/>
 
 
+            <TextView
+                android:id="@+id/essayOfGood"
+                android:layout_width="match_parent"
+                android:layout_height="69dp"
+
+                android:layout_below="@id/currencyOfCostInHistoryOfGood"
+                android:layout_marginStart="4dp"
+
+                android:layout_marginLeft="4dp"
+                android:layout_marginEnd="4dp"
 
 
-                <TextView
-                    android:id="@+id/essayOfGood"
-                    android:layout_width="match_parent"
-                    android:layout_height="69dp"
-
-                    android:layout_marginStart="4dp"
-                    android:layout_marginLeft="4dp"
-
-                    android:layout_marginEnd="4dp"
-                    android:layout_marginRight="4dp"
-
-
-                    android:layout_below="@id/currencyOfCostInHistoryOfGood"
-                    android:background="@drawable/background_for_essay"
-                    android:paddingLeft="10dp"
-                    android:paddingTop="5dp"
-                    android:text="Цель"
-                    android:textColor="@color/black"
-                    android:textSize="15dp"
-                    />
+                android:layout_marginRight="4dp"
+                android:background="@drawable/background_for_essay"
+                android:paddingLeft="10dp"
+                android:paddingTop="5dp"
+                android:text="Цель"
+                android:textColor="@color/black"
+                android:textSize="15dp" />
 
             <View
                 android:layout_width="0dp"
